--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FirstFragment"
         android:name="edu.quinnipiac.ser210.fevertracker.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_main_menu">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -19,10 +19,15 @@
         android:id="@+id/SecondFragment"
         android:name="edu.quinnipiac.ser210.fevertracker.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        tools:layout="@layout/fragment_form">
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_SecondFragment_to_reportsFragment"
+            app:destination="@id/reportsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/reportsFragment"
+        android:name="edu.quinnipiac.ser210.fevertracker.ReportsFragment"
+        android:label="@string/reports_fragment_label"
+        tools:layout="@layout/fragment_reports">
     </fragment>
 </navigation>
