Added warning if user temp is greater than 102 degrees F.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_SecondFragment_to_reportsFragment"
             app:destination="@id/reportsFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_warning"
+            app:destination="@id/warning" />
     </fragment>
     <fragment
         android:id="@+id/reportsFragment"
@@ -41,4 +44,9 @@
             android:id="@+id/action_reportsFragment_to_secondFragment"
             app:destination="@id/SecondFragment"/>
     </fragment>
+    <fragment
+        android:id="@+id/warning"
+        android:name="edu.quinnipiac.ser210.fevertracker.Warning"
+        android:label="fragment_warning"
+        tools:layout="@layout/fragment_warning" />
 </navigation>
